--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,12 @@
   <artifactId>hello-world</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>myhelloworld</name>
+  
+  <dependencies>
+	  <dependency>
+	    <groupId>io.netty</groupId>
+	    <artifactId>netty-all</artifactId>
+	    <version>5.0.0.Alpha2</version>
+	  </dependency>
+  </dependencies>
 </project>
